--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -1,124 +1,30 @@
-<!-- Wrapper -->
-<div id="wrapper" class="fade-in">
-  <!-- Intro -->
-  <div id="intro">
-    <h1>Pair 5</h1>
-    <br /><br /><br /><br /><br />
-    <ul class="actions">
-      <li>
-        <a href="#main" class="button icon solid solo fa-arrow-down scrolly"
-          >Continue</a
-        >
-      </li>
-    </ul>
-    <div id="BackToMain" [style.display]="displayIntro ? 'block' : 'none'">
-      <ul class="actions">
-        <li>
-          <a href="#wrapper" class="button icon solid solo fa-arrow-up scrolly"
-            >Continue</a
-          >
-        </li>
-      </ul>
-    </div>
-  </div>
-
-  <!-- Nav -->
-  <nav id="nav">
-    <ul class="links">
-      <li class="active"><a href="index.html">Bootcamps</a></li>
-      <li>
-        <a href="generic.html" class="nav-link disabled"
-          >Biz kimiz?[Kullanım dışı]</a
-        >
-      </li>
-      <li>
-        <a href="elements.html" class="nav-link disabled"
-          >Diğer Çalışmalar[Kullanım dışı]</a
-        >
-      </li>
-    </ul>
-    <ul class="icons">
-      <li>
-        <a href="#" class="icon brands fa-twitter"
-          ><span class="label">Twitter</span></a
-        >
-      </li>
-      <li>
-        <a href="#" class="icon brands fa-facebook-f"
-          ><span class="label">Facebook</span></a
-        >
-      </li>
-      <li>
-        <a href="#" class="icon brands fa-instagram"
-          ><span class="label">Instagram</span></a
-        >
-      </li>
-      <li>
-        <a href="#" class="icon brands fa-github"
-          ><span class="label">GitHub</span></a
-        >
-      </li>
-    </ul>
-  </nav>
-
-  <!-- Main -->
-  <div id="main">
-    <!-- Featured Post -->
-    <article class="post featured">
-      <div class="container">
-        <app-bootcamp-card></app-bootcamp-card>
-      </div>
-    </article>
-
-    <!-- Posts -->
-    <section class="posts">
-      <!-- Your other articles/posts -->
-    </section>
-  </div>
-
-  <!-- Footer -->
-  <footer id="footer">
-    <section>
-      <h3>Social</h3>
-      <ul class="icons alt">
-        <li>
-          <a href="#" class="icon brands alt fa-twitter"
-            ><span class="label">Twitter</span></a
-          >
-        </li>
-        <li>
-          <a href="#" class="icon brands alt fa-facebook-f"
-            ><span class="label">Facebook</span></a
-          >
-        </li>
-        <li>
-          <a href="#" class="icon brands alt fa-instagram"
-            ><span class="label">Instagram</span></a
-          >
-        </li>
-        <li>
-          <a href="#" class="icon brands alt fa-github"
-            ><span class="label">GitHub</span></a
-          >
-        </li>
-      </ul>
-    </section>
-  </footer>
-
-  <!-- Copyright -->
-  <div id="copyright">
-    <ul>
-      <li>&copy;</li>
-      <li>Design: <a href="">Pair-5</a></li>
-    </ul>
-  </div>
-
-  <!-- Scripts -->
-  <script src="assets/js/jquery.min.js"></script>
-  <script src="assets/js/jquery.scrollex.min.js"></script>
-  <script src="assets/js/jquery.scrolly.min.js"></script>
-  <script src="assets/js/browser.min.js"></script>
-  <script src="assets/js/breakpoints.min.js"></script>
-  <script src="assets/js/util.js"></script>
-  <script src="assets/js/main.js"></script>
-</div>
+	  		<!-- Full Page Intro -->
+		<div class="view darken-3 pt-5">
+		  <!-- Mask & flexbox options-->
+		  <div class="justify-content-center">
+			<!-- Content -->
+			<div class="container h-100">
+			  <!--Grid row-->
+			  <div class="row align-items-center h-100">
+				<!--Grid column-->
+				<div class="col-md-6 wow fadeInLeft">
+				  <h1 class="white-text mb-4">Better Website Design, More Conversion</h1>
+				  <p class="mb-4 pb-2 white-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam vitae, culpa qui officia deserunt labor debitis.</p>
+				  <button type="button" routerLink="/bootcamps" class="btn btn-outline-white btn-md ml-md-0">Keşfetmeye başla</button>
+				  <button type="button" routerLink="/login" class="btn btn-white btn-md">Aramıza katıl!</button>
+				</div>
+				<!--Grid column-->
+			 
+				<!--Grid column-->
+				<div class="col-md-6 wow fadeInRight">
+				  <img src="https://mdbootstrap.com/img/Mockups/Transparent/Small/cards2.png" alt="" class="img-fluid">
+				</div>
+				<!--Grid column-->
+			  </div>
+			  <!--Grid row-->
+			</div>
+			<!-- Content -->
+		  </div>
+		  <!-- Mask & flexbox options-->
+		</div>
+		<!-- Full Page Intro -->
