--- a/src/app/pages/homepage/homepage.component.scss
+++ b/src/app/pages/homepage/homepage.component.scss
@@ -4,3 +4,11 @@
     right: 20px;
     z-index: 9999; 
 }
+
+.card-body {
+    transition: height 0.3s;
+  }
+  
+  .d-none {
+    display: none !important;
+  }
