--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -1,1 +1,83 @@
-<p>profile works!</p>
+  <div class="container-fluid">
+    <div class="d-flex justify-content-center">
+      <div class="col-xl-8">
+        <div class="card">
+          <img
+            src="https://mdbootstrap.com/img/new/slides/024.jpg"
+            class="card-img-top"
+            alt="..."
+          />
+          <div class="card-body pt-3">
+            <div class="d-flex align-items-center mb-5">
+              <div class="flex-shrink-0">
+                <img
+                  src="https://mdbootstrap.com/img/new/avatars/11.jpg"
+                  class="rounded-circle profile-img"
+                  alt=""
+                />
+              </div>
+              <div class="flex-grow-1 ms-3">
+                <p class="fw-bold mb-2 h5">Joanna Doe</p>
+                <p class="text-muted mb-0">
+                  <i class="fas fa-map-marker-alt me-2"></i>john.doe
+                </p>
+              </div>
+            </div>
+            <div class="text-center d-flex justify-content-center mb-4">
+              <button type="button" class="btn btn-info btn-rounded w-100 me-3">Takip Et</button>
+              <button type="button" class="btn btn-outline-info btn-rounded w-100">Mesaj Gönder</button>
+            </div>
+            <div class="mb-4">
+              <h5>Hakkında</h5>
+              <p>Ben Joanna Doe, yazılım geliştirici ve teknoloji meraklısıyım.</p>
+            </div>
+            <div class="mb-4">
+              <h5>Doğum Tarihi</h5>
+              <p>15 Mayıs 1985</p>
+            </div>
+            <div class="mb-4">
+              <h5>Kimlik Numarası</h5>
+              <p>12345678901</p>
+            </div>
+            <div class="mb-4">
+              <h5>E-posta</h5>
+              <p>joanna.doeexample.com</p>
+            </div>
+            <div class="text-center d-flex justify-content-center mb-4">
+              <button type="button" class="btn btn-warning btn-rounded w-100">Profili Düzenle</button>
+            </div>
+          </div>
+          <div class="card-footer border-0 bg-light py-4 overflow-hidden">
+            <p class="text-muted">
+              <i class="far fa-user me-2"></i><span class="text-dark fw-bold">8</span> arkadaş
+            </p>
+            <div class="d-flex">
+              <img src="https://mdbootstrap.com/img/new/avatars/3.jpg" class="rounded-circle" alt="" />
+              <img src="https://mdbootstrap.com/img/new/avatars/4.jpg" class="rounded-circle" alt="" style="margin-left: -15px;" />
+              <img src="https://mdbootstrap.com/img/new/avatars/5.jpg" class="rounded-circle" alt="" style="margin-left: -15px;" />
+              <img src="https://mdbootstrap.com/img/new/avatars/6.jpg" class="rounded-circle" alt="" style="margin-left: -15px;" />
+              <img src="https://mdbootstrap.com/img/new/avatars/7.jpg" class="rounded-circle" alt="" style="margin-left: -15px;" />
+              <img src="https://mdbootstrap.com/img/new/avatars/8.jpg" class="rounded-circle" alt="" style="margin-left: -15px;" />
+              <img src="https://mdbootstrap.com/img/new/avatars/9.jpg" class="rounded-circle" alt="" style="margin-left: -15px;" />
+              <img src="https://mdbootstrap.com/img/new/avatars/10.jpg" class="rounded-circle" alt="" style="margin-left: -15px;" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <script
+    src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"
+  ></script>
+  <script
+    src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"
+    integrity="sha384-pzjw8f+ua7Kw1TIq5TvCn5C6lKxtErtTptclzYtdHGyl24JJm+RDXAZMRQ9h4NVt"
+    crossorigin="anonymous"
+  ></script>
+  <script
+    src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1srY6O/mGA4U02tQKW5yYRIhZp6UcYjBMiJbHwyjDNF7WXnBCpQ4G5F1FItB"
+    crossorigin="anonymous"
+  ></script>
