--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,163 +1,184 @@
-<div class="login-bg-image">
-  <div class="container-fluid" style="position: relative; overflow-y: auto; height: 100vh;">
-    <div class="row justify-content-center align-items-center" style="height: 100%;">
-      <div class="col-md-12">
-        <div class="card login-container">
-            <mdb-tabs [pills]="true" [fill]="true">
-            <mdb-tab title="Giriş yap">
-              <form>
-                <div class="text-center mb-3">
-                  <p>Giriş yapmak için aşağıdaki hesapları kullan:</p>
-                  <button mdbRipple type="button" class="btn btn-secondary btn-floating mx-1">
-                    <i class="fab fa-facebook-f"></i>
-                  </button>
-
-                  <button mdbRipple type="button" class="btn btn-secondary btn-floating mx-1">
-                    <i class="fab fa-google"></i>
-                  </button>
-
-                  <button mdbRipple type="button" class="btn btn-secondary btn-floating mx-1">
-                    <i class="fab fa-twitter"></i>
-                  </button>
-
-                  <button mdbRipple type="button" class="btn btn-secondary btn-floating mx-1">
-                    <i class="fab fa-github"></i>
-                  </button>
-                </div>
-
-                <p class="text-center">ya da kullanıcı girişi yap</p>
-
-                <!-- Email input -->
-                <form [formGroup]="loginForm">
-                  <div class="form-group">
-                    <mdb-form-control class="mb-4">
-                      <input mdbInput formControlName="email" type="email" id="logiNE" class="form-control" />
-                      <label mdbLabel class="form-label" for="logiNE">Email/Kullanıcı adı</label>
-                    </mdb-form-control>
+<section class="grainy-gradient-intro">
+  <svg height="0" width="0">
+    <filter id='f'>
+      <feTurbulence type='fractalNoise' baseFrequency='.5' />
+    </filter>
+  </svg>
+  <!-- <div class="ocean">
+    <div class="wave"></div>
+    <div class="wave"></div>
+    <div class="wave"></div>
+  </div> -->
+  <div class="d-flex justify-content-center align-items-center text-center" style="height: calc(100vh - 26px);">
+    <div class="container-fluid" style="position: relative; overflow-y: auto; height: 100vh;">
+      <div class="row justify-content-center align-items-center" style="height: 100%;">
+        <div class="col-md-12">
+          <div class="login-container">
+              <mdb-tabs [pills]="true" [fill]="true">
+              <mdb-tab title="Giriş yap">
+                <form>
+                  <div class="text-center mb-3">
+                    <p>Giriş yapmak için aşağıdaki hesapları kullan:</p>
+                    <button mdbRipple type="button" class="btn btn-secondary btn-floating mx-1">
+                      <i class="fab fa-facebook-f"></i>
+                    </button>
+  
+                    <button mdbRipple type="button" class="btn btn-secondary btn-floating mx-1">
+                      <i class="fab fa-google"></i>
+                    </button>
+  
+                    <button mdbRipple type="button" class="btn btn-secondary btn-floating mx-1">
+                      <i class="fab fa-twitter"></i>
+                    </button>
+  
+                    <button mdbRipple type="button" class="btn btn-secondary btn-floating mx-1">
+                      <i class="fab fa-github"></i>
+                    </button>
                   </div>
-
-                  <!-- Password input -->
-                  <div class="form-group">
-                    <mdb-form-control class="mb-4">
-                      <input mdbInput formControlName="password" type="password" id="loginP" class="form-control" />
-                      <label mdbLabel class="form-label" for="loginP">Şifre</label>
-                    </mdb-form-control>
-                  </div>
-
-                  <!-- 2 column grid layout -->
-                  <div class="row mb-4">
-                    <div class="col-md-6 d-flex justify-content-center">
-                      <!-- Checkbox -->
-                      <div class="form-check mb-3 mb-md-0">
-                        <input mdbCheckbox class="form-check-input" type="checkbox" value="" id="loginCheck"
-                          [checked]="false" />
-                        <label class="form-check-label" for="loginCheck">Beni hatırla!</label>
+  
+                  <p class="text-center">ya da kullanıcı girişi yap</p>
+  
+                  <!-- Email input -->
+                  <form [formGroup]="loginForm">
+                    <div class="form-group">
+                      <mdb-form-control class="mb-4">
+                        <input mdbInput formControlName="email" type="email" id="logiNE" class="form-control" />
+                        <label mdbLabel class="form-label" for="logiNE">Email/Kullanıcı adı</label>
+                      </mdb-form-control>
+                    </div>
+  
+                    <!-- Password input -->
+                    <div class="form-group">
+                      <mdb-form-control class="mb-4">
+                        <input mdbInput formControlName="password" type="password" id="loginP" class="form-control" />
+                        <label mdbLabel class="form-label" for="loginP">Şifre</label>
+                      </mdb-form-control>
+                    </div>
+  
+                    <!-- 2 column grid layout -->
+                    <div class="row mb-4">
+                      <div class="col-md-6 d-flex justify-content-center">
+                        <!-- Checkbox -->
+                        <div class="form-check mb-3 mb-md-0">
+                          <input mdbCheckbox class="form-check-input" type="checkbox" value="" id="loginCheck"
+                            [checked]="false" />
+                          <label class="form-check-label" for="loginCheck">Beni hatırla!</label>
+                        </div>
+                      </div>
+  
+                      <div class="col-md-6 d-flex justify-content-center">
+                        <!-- Simple link -->
+                        <a routerLink="#!">Şifreni mi unuttun?</a>
                       </div>
                     </div>
-
-                    <div class="col-md-6 d-flex justify-content-center">
-                      <!-- Simple link -->
-                      <a routerLink="#!">Şifreni mi unuttun?</a>
+  
+                    <!-- Submit button -->
+                    <button mdbRipple type="submit" class="btn btn-outline-primary btn-rounded col-md-12"
+                      (click)="login()"> Giriş Yap</button>
+                  </form>
+                </form>
+              </mdb-tab>
+              <mdb-tab title="Kayıt Ol">
+                <form>
+                  <div class="text-center mb-3">
+                    <p>Kayıt olmak için aşağıdaki hesapları kullan:</p>
+                    <button mdbRipple type="button" class="btn btn-secondary btn-floating mx-1">
+                      <i class="fab fa-facebook-f"></i>
+                    </button>
+  
+                    <button mdbRipple type="button" class="btn btn-secondary btn-floating mx-1">
+                      <i class="fab fa-google"></i>
+                    </button>
+  
+                    <button mdbRipple type="button" class="btn btn-secondary btn-floating mx-1">
+                      <i class="fab fa-twitter"></i>
+                    </button>
+  
+                    <button mdbRipple type="button" class="btn btn-secondary btn-floating mx-1">
+                      <i class="fab fa-github"></i>
+                    </button>
+                  </div>
+  
+                  <p class="text-center">ya da:</p>
+  
+                  <!-- Name input -->
+                  <form [formGroup]="registerForm">
+                    <div class="row mb-4">
+                      <!-- Name input -->
+                      <div class="col-md-6">
+                        <mdb-form-control>
+                          <input mdbInput formControlName="firstName" type="text" id="registerName" class="form-control" />
+                          <label mdbLabel class="form-label" for="registerName">İsim</label>
+                        </mdb-form-control>
+                      </div>
+                      <!-- LastName input -->
+                      <div class="col-md-6">
+                        <mdb-form-control>
+                          <input mdbInput formControlName="lastName" type="text" id="registerLastName" class="form-control" />
+                          <label mdbLabel class="form-label" for="registerLastName">Soyisim</label>
+                        </mdb-form-control>
+                      </div>
                     </div>
-                  </div>
-
-                  <!-- Submit button -->
-                  <button mdbRipple type="submit" class="btn btn-outline-primary btn-rounded col-md-12"
-                    (click)="login()"> Giriş Yap</button>
+                    <!-- Username input -->
+                    <mdb-form-control class="mb-4">
+                      <input mdbInput formControlName="userName" type="text" id="registerUsername" class="form-control" />
+                      <label mdbLabel class="form-label" for="registerUsername">Kullanıcı adı</label>
+                    </mdb-form-control>
+                  
+                    <!-- Email input -->
+                    <mdb-form-control class="mb-4">
+                      <input mdbInput formControlName="email" type="email" id="registerEmail" class="form-control" />
+                      <label mdbLabel class="form-label" for="registerEmail">Email</label>
+                    </mdb-form-control>
+                    
+                    <!-- ID input -->
+                    <mdb-form-control class="mb-4">
+                      <input mdbInput formControlName="nationalIdentity" type="text" id="registerID" class="form-control" maxlength="11" oninput="this.value = this.value.replace(/[^0-9]/g, '').slice(0, 11)" />
+                      <label mdbLabel class="form-label" for="registerID">Kimlik</label>
+                    </mdb-form-control>
+                  
+                    <!-- Birth input -->
+                    <mdb-form-control class="mb-4">
+                      <input mdbInput formControlName="dateOfBirth" type="date" id="registerDate" class="form-control" />
+                      <label mdbLabel class="form-label" for="registerDate">Doğum tarihi</label>
+                    </mdb-form-control>
+                  
+                    <!-- About input -->
+                    <mdb-form-control class="mb-4">
+                      <textarea mdbInput formControlName="about" id="registerAbout" class="form-control" placeholder="Bize biraz kendinden bahset."></textarea>
+                      <label mdbLabel class="form-label" for="registerAbout">Hakkımda</label>
+                    </mdb-form-control>
+                    <div class="row mb-4">
+                      <!-- Pass input -->
+                      <div class="col-md-6">
+                        <mdb-form-control class="mb-4">
+                          <input mdbInput formControlName="password" type="password" id="registerPassword" class="form-control" />
+                          <label mdbLabel class="form-label" for="registerPassword">Şifre</label>
+                        </mdb-form-control>
+                      </div>
+                      <!-- PassRepeat input -->
+                      <div class="col-md-6">
+                        <mdb-form-control class="mb-4">
+                          <input formControlName="passwordConfirm" mdbInput type="password" id="registerRepeatPassword" class="form-control" />
+                          <label mdbLabel class="form-label" for="registerRepeatPassword">Şifreyi tekrarla</label>
+                        </mdb-form-control>
+                      </div>
+                    </div>
+                    <!-- Checkbox -->
+                    <div class="form-check d-flex justify-content-center mb-4">
+                      <input mdbCheckbox formControlName="isConfirm" class="form-check-input me-2" type="checkbox" value="" id="registerCheck" [checked]="true" aria-label="registerCheckHelpText" />
+                      <label class="form-check-label" for="registerCheck" routerLink="#">Şartları okudum ve kabul ediyorum.</label>
+                    </div>
+                  
+                    <!-- Submit button -->
+                    <button mdbRipple type="submit" class="btn btn-outline-primary btn-rounded col-md-12" (click)="register()">Kayıt ol</button>
+                  </form>
+                  
                 </form>
-              </form>
-            </mdb-tab>
-            <mdb-tab title="Kayıt Ol">
-              <form>
-                <div class="text-center mb-3">
-                  <p>Kayıt olmak için aşağıdaki hesapları kullan:</p>
-                  <button mdbRipple type="button" class="btn btn-secondary btn-floating mx-1">
-                    <i class="fab fa-facebook-f"></i>
-                  </button>
+              </mdb-tab>
+            </mdb-tabs>
+          </div></div></div></div>
+  </div>
 
-                  <button mdbRipple type="button" class="btn btn-secondary btn-floating mx-1">
-                    <i class="fab fa-google"></i>
-                  </button>
 
-                  <button mdbRipple type="button" class="btn btn-secondary btn-floating mx-1">
-                    <i class="fab fa-twitter"></i>
-                  </button>
-
-                  <button mdbRipple type="button" class="btn btn-secondary btn-floating mx-1">
-                    <i class="fab fa-github"></i>
-                  </button>
-                </div>
-
-                <p class="text-center">ya da:</p>
-
-                <!-- Name input -->
-                <form [formGroup]="registerForm">
-                  <mdb-form-control class="mb-4">
-                    <input mdbInput formControlName="firstName" type="text" id="registerName" class="form-control" />
-                    <label mdbLabel class="form-label" for="registerName">Name</label>
-                  </mdb-form-control>
-
-                  <!-- LastName input -->
-                  <mdb-form-control class="mb-4">
-                    <input mdbInput formControlName="lastName" type="text" id="registerLastName" class="form-control" />
-                    <label mdbLabel class="form-label" for="registerLastName">LastName</label>
-                  </mdb-form-control>
-                  <!-- Username input -->
-                  <mdb-form-control class="mb-4">
-                    <input mdbInput formControlName="userName" type="text" id="registerUsername" class="form-control" />
-                    <label mdbLabel class="form-label" for="registerUsername">Username</label>
-                  </mdb-form-control>
-
-                  <!-- Email input -->
-                  <mdb-form-control class="mb-4">
-                    <input mdbInput formControlName="email" type="email" id="registerEmail" class="form-control" />
-                    <label mdbLabel class="form-label" for="registerEmail">Email</label>
-                  </mdb-form-control>
-                  <!-- ID input -->
-                  <mdb-form-control class="mb-4">
-                    <input mdbInput formControlName="nationalIdentity" type="text" id="registerID" class="form-control"
-                      maxlength="11" oninput="this.value = this.value.replace(/[^0-9]/g, '').slice(0, 11)" />
-                    <label mdbLabel class="form-label" for="registerID">Kimlik</label>
-                  </mdb-form-control>
-
-                  <!-- Birth input -->
-                  <mdb-form-control class="mb-4">
-                    <input mdbInput formControlName="dateOfBirth" type="date" id="registerDate" class="form-control" />
-                    <label mdbLabel class="form-label" for="registerDate">Doğum tarihi</label>
-                  </mdb-form-control>
-                  <!-- about input -->
-                  <mdb-form-control class="mb-4">
-                    <textarea mdbInput formControlName="about" type="date" id="registerAbout"
-                      class="form-control"> </textarea>
-                    <label mdbLabel class="form-label" for="registerAbout">Hakkımda</label>
-                  </mdb-form-control>
-                  <!-- Password input -->
-                  <mdb-form-control class="mb-4">
-                    <input mdbInput formControlName="password" type="password" id="registerPassword"
-                      class="form-control" />
-                    <label mdbLabel class="form-label" for="registerPassword">Şifre</label>
-                  </mdb-form-control>
-
-                  <!-- Repeat Password input -->
-                  <mdb-form-control class="mb-4">
-                    <input formControlName="passwordConfirm" mdbInput type="password" id="registerRepeatPassword"
-                      class="form-control" />
-                    <label mdbLabel class="form-label" for="registerRepeatPassword">Şifreyi tekrarla</label>
-                  </mdb-form-control>
-
-                  <!-- Checkbox -->
-                  <div class="form-check d-flex justify-content-center mb-4">
-                    <input mdbCheckbox formControlName="isConfirm" class="form-check-input me-2" type="checkbox"
-                      value="" id="registerCheck" [checked]="true" aria-label="registerCheckHelpText" />
-                    <label class="form-check-label" for="registerCheck" routerLink="#">Şartları okudum ve kabul
-                      ediyorum.</label>
-                  </div>
-
-                  <!-- Submit button -->
-                  <button mdbRipple type="submit" class="btn btn-outline-primary btn-rounded col-md-12"
-                    (click)="register()">Kayıt ol</button>
-                </form>
-              </form>
-            </mdb-tab>
-          </mdb-tabs>
-        </div></div></div></div>
+</section>
